• skript.latex   · Die Vorlesung vom Donnerstag mit den gleichen Fehlern. Ich bin nicht dazu     gekommen sie zu korrigieren.
git-svn-id: https://svn.lug-jena.de/uni-skripte@480 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -63,6 +63,7 @@
 \usepackage{ellipsis}    % Korrektur für \dots
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
+\usepackage{wasysym}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -280,8 +281,8 @@ Eigenschaften.
 \end{defini}
 
 \begin{bemerk}
-  Die Menge der positiven Primzahlen sei $\PZ$. Euklid hat gezeigt\help{stimmt
-  das?} $\PZ$ ist unendlich.
+  Die Menge der positiven Primzahlen sei $\PZ$. Euklid hat gezeigt $\PZ$
+  ist unendlich.
 \end{bemerk}
 
 Die aktuell, größe Primzahl von heute morgen ist $2^{32582657}-1$. Quelle GIMPS.
@@ -813,6 +814,304 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
     \dots
   \end{tabular}
 \end{bsp}
+
+\begin{satz}
+  Jede endliche Untergruppe der multiplikativen Gruppe eines Körpers ist
+  \highl{zyklisch}.
+
+  \begin{proof}
+    Übungsaufgabe
+  \end{proof}
+\end{satz}
+
+\begin{fakt}
+  Sei $(\F_{p}^{\ast})^{2}$ ist die Untergruppe der Quadrate in
+  $\F_{p}^{\ast}$. Für $p>2$ ist $(\F_{p}^{\ast})^{2}$ der Ordnung
+  $\frac{p-1}{2}$. Es gibt also im $\F_{p}^{\ast}$ genau $\frac{p-1}{2}$
+  Quadrate und Nichtquadrate.
+
+  \begin{proof}
+    Sei $g$ Primitivwurzel, dann ist $g^{a}$ ($0\leq a< p-1$) eine
+    Quadrat \gdw $a$ ist gerade.
+  \end{proof}
+\end{fakt}
+
+\begin{defini}
+  Das \highl{Legendre-Symbol} ist die Abbildung
+  \begin{gather*}
+    \Big(\frac{\cdot}{p}\Big)\colon \F_{p}^{\ast} \rightarrow \{\pm 1\}
+  \end{gather*}
+  definiert durch
+  \begin{gather*}
+    \Big(\frac{x}{p}\Big) =
+       \begin{cases}
+         +1 &\colon x\in (\F_{p}^{\ast})^{2}\\
+         -1 &\colon x\in \F_{p}^{\ast}\setminus (\F_{p}^{\ast})^{2}
+       \end{cases}
+  \end{gather*}
+  Dabei ist $p>2$.
+\end{defini}
+
+\begin{bemerk}
+  Es wird nicht präzisiert, wo $\pm1$ liegen. Es kann $\Q, \R, \C,
+  \F_{l}^{\ast}, l\ne p F_{p}^{\ast}$ sein.
+\end{bemerk}
+
+\begin{fakt}[Elementare Eigenschaften]
+  \begin{enumerate}
+   \item $(\frac{x}{p}) = x^{\frac{p-1}{2}}$ (in $\F_{p}$)
+   \item $(\frac{xy}{p}) = (\frac{x}{p})(\frac{y}{p})$
+   \item $(\frac{1}{p}) = 1$
+   \item $(\frac{-1}{p}) = (-1)^{\frac{p-1}{2}}$
+  \end{enumerate}
+
+  \begin{proof}
+    \begin{enumerate}
+     \item $x=g^{a}, g\in \F_{p}^{\ast}$ Primitivwurzel. $0\leq a <p-1$,
+      $x^{p}=1 \Rightarrow x^{\frac{p-1}{2}} = \pm 1$. Weiter
+      $g^{\frac{p-1}{2}} = -1$. Ist $x$ Quadrat, so ist $a$ gerade, also
+      $x^{\frac{p-1}{2}}=g^{a\frac{p-1}{2}} = (-1)^{a}=1$.
+
+      Ist $x^{\frac{p-1}{2}}=1$,so folgt $g^{a\frac{p-1}{2}}=1$, also
+      $(-1)^{a} = 1 \Rightarrow a$ ist gerade.
+
+     \item folgt sofort aus (i)
+     \item ist trivial
+     \item $(-1)^{\frac{p-1}{2}} = (\frac{-1}{p})$ nach (i).
+    \end{enumerate}
+  \end{proof}
+\end{fakt}
+
+\begin{bemerk}
+  (iv) heißt 1.\,Ergänzungssatz zum quadratischen Reziprozitätsgesetz.
+\end{bemerk}
+
+\begin{bemerk}
+  $-1$ ist Quadrat in $\F_{p}^{\ast}$ \gwd $p\equiv 1\pmod{4}$
+\end{bemerk}
+
+\begin{defini}
+  Sei $p>2$ prim, $S\subset \F_{p}^{\ast}$ heißt \highl{Halbsystem}, wenn
+  $S\cup (-S) = \F_{p}^{\ast}$.
+
+  $S\cap (-S) = \emptyset$
+\end{defini}
+
+\begin{bsp}
+  $S=\{1,2,\dotsc,\frac{p-1}{2}\}$ Wenn $s\in S, a\in\F_{p}^{\ast}$, dann
+  ist $a\cdot s= e_{s}(a)\cdot s'$ für ein $s'\in F, e_{s}(a) = \pm1$.
+\end{bsp}
+
+\begin{lemma}[Gauss]
+  \begin{gather*}
+    \Big(\frac{x}{p}\Big) = \prod_{s\in S} e_{s}(x)
+  \end{gather*}
+
+  \begin{proof}
+    Seien $s_{1}, s_{2}\in S, s_{1}\ne s_{2}, a\in \F_{p}^{\ast}, as_{1}=
+    e_{s_{1}}(a) s_{1}', as_{2} = e_{s_{2}}(a) s_{2}'$.
+
+    Dann gilt $s_{1}' \ne s_{2}'$. Denn $s_{1}' = s_{2} \Rightarrow s_{1}
+    = \pm s_{2}$. \lightning
+  \end{proof}
+\end{lemma}
+
+Also ist die Abbildung $s\mapsto s'\colon S\rightarrow S$ eine Bijektion.
+Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
+\begin{gather*}
+  a^{\frac{p-1}{2}} \prod_{s\in S} s = \prod_{s\in S} e_{s}(a) \prod_{s\in S} s'\\
+  \Rightarrow a^{\frac{p-1}{2}} = \prod_{s\in S} e_{s}(a)
+\end{gather*}
+
+\begin{fakt}[2.\, Ergänzungssatz zum QRG]
+  \begin{gather*}
+    (\frac{2}{p}) = (-1)^{\frac{p^{2}-1}{8}}
+  \end{gather*}
+  Oder
+  \begin{gather*}
+    (\frac{2}{p}) = \begin{cases}+1 &\colon p\equiv1,7\pmod{8} \\
+                      -1&\colon p\equiv 3,5\pmod{8}\end{cases}
+  \end{gather*}
+
+  \begin{proof}
+    $S=\{ 1,2,\dotsc,\frac{p-1}{2}\}$. Dann ist $e_{s}(2) = 1$ für $2s\leq
+    \frac{p-1}{2}$, $e_{s}(2) = -1$ für $2s>\frac{p-1}{2}$.
+
+    Also $(\frac{2}{p}) = (-1)^{\alpha(p)}, \alpha(p) = \card
+    \{s\in\Z\colon \frac{p-1}{4} < s \leq \frac{p-1}{2}\}$.
+
+    \begin{faelle}
+     \item $p=4k+1$, dann ist $\alpha(p)=k$:
+      $k<s\leq 2k$; also $(\frac{2}{p}) = (-1)^{k} = \begin{cases}1 &
+       p\equiv 1\pmod{8}\\ -1 & p\equiv 5\pmod{8} \end{cases}$.
+
+     \item $p=4k+3$. $k+\frac{1}{2} <s \leq 2k+1$ $\Rightarrow$ $\alpha(p)
+      = k+1$ $\Rightarrow$ $(\frac{2}{k}) = \begin{cases}1 & p\equiv
+      7\pmod{8}\\-1 & p\equiv3\pmod{8}\end{cases}$.
+    \end{faelle}
+  \end{proof}
+\end{fakt}
+
+\begin{satz}[Quadratische Rez.gesetz]
+  Seien $p,l$ ungerade Primzahlen, $p\ne l$, dann gilt
+  \begin{gather*}
+    (\frac{p}{l})(\frac{l}{p}) = (-1)^{\frac{p-1}{2} \frac{l-1}{2}}
+  \end{gather*}
+
+  \begin{proof}[nach V.G. KAC]
+    Sei $\zeta = e^{\frac{2\pi \sqrt{-1}}{p}}$. Dann gilt
+    \begin{gather*}
+      \prod_{j=1}^{p-1} (X-\zeta^{j} Y) = \frac{X^{p}-Y^{p}}{X-Y}\\
+      \Rightarrow
+         \prod_{j=1}^{p-1} ( \zeta^{j} X -\zeta^{-j} Y) =
+         \zeta^{2\frac{(p-1)p}{2}} \prod (X-\zeta^{j}Y) = \prod
+         (X-\zeta^{j} Y)\\
+      \prod_{j=1}^{p-1} (\zeta^{j}X - \zeta^{-j} Y) =
+         \prod_{j=1}^{\frac{p-1}{2}} (\zeta^{j} X - \zeta^{-j} Y)
+         (\zeta^{-j} X - \zeta^{j} Y)
+    \end{gather*}
+    $T=\{1,2,\dotsc,\frac{p-1}{2}\}$.
+
+    Sei $\Theta = e^{\frac{2\pi \sqrt{-1}}{p}}, X=\Theta^{i},
+    Y=\Theta^{-i}$.
+
+    Es folgt
+    \begin{gather*}
+      \frac{\Theta^{ip}-\Theta^{-ip}}{\Theta^{i}-\Theta^{-i}} =
+         \prod_{i\in T} (\zeta^{j} \Theta^{i} -\zeta^{-j} \Theta^{-i})
+         (\zeta^{-j}\Theta^{i} - \zeta^{j}\Theta^{-i})
+    \end{gather*}
+
+    Produkt über $i\in S=\{1,2,\dotsc,\frac{l-1}{2}\}$
+    \begin{gather*}
+      \prod_{i\in S}
+         \frac{\Theta^{ip}-\Theta^{-ip}}{\Theta^{i}-\Theta^{-i}}
+         =\prod_{i\in S} \prod_{i\in T} (\zeta^{j} \Theta^{i} -
+         \zeta^{-j} \Theta^{-i}) (\zeta^{-j}\Theta^{i} -
+         \zeta^{j}\Theta^{-i})\\
+      LHS= \prod_{i\in S} \frac{\sin(\frac{2\pi i p}{l})}
+         {\sin(\frac{2\pi i}{l})}
+         = \prod_{i\in S} e_{p}(i) = (\frac{p}{l})
+    \end{gather*}
+
+    Es folgt (Vertauschung von $l$ und $p$
+    \begin{gather*}
+      (\frac{l}{p}) = \prod_{i\in S} \prod_{j\in T} (\zeta^{j} \Theta^{i}
+         - \zeta^{-j} \Theta^{-i})(\zeta^{j} \Theta^{-i} - \zeta^{-j}
+         \Theta^{i})
+    \end{gather*}
+    Beide Ausdrücke underscheiden sich nur in den 2. Faktoren um jeweil
+    $-1$. $\Rightarrow$
+    \begin{gather*}
+      (\frac{p}{l}) (\frac{l}{p}) = (-1)^{\frac{p-1}{2}\frac{l-1}{2}}
+    \end{gather*}
+  \end{proof}
+
+  \begin{proof}[Gauss]
+    Sei $m= \frac{p-1}{2}, n=\frac{l-1}{2}$ und wir betrachten die
+    $m\cdot n$ Zahlen $py-lx$, $1\leq x\leq m, 1\leq \leq n$. Diese sind
+    alle $\ne0$ und verschieden:
+    \begin{gather*}
+      p y_{1} - lx_{1} = py_{2} - lx_{2} \Rightarrow p(y_{1}-y_{2}) =
+         l(x_{1}-x_{2})
+    \end{gather*}
+    $\Rightarrow$ $p\vert x_{1}-x_{2}$ $-m<x_{1}-x_{2}< m$ $\Rightarrow$
+    $x_{1}=x_{2}$, analog $y_{1}=y_{2}$.
+
+    Sei $P$ Anzahl der positiven $py-lx$, $N$ die Anzahl der negativen.
+    Also $P+N = m\cdot n$. Wir fixieren $x$ und fragen: Wie viele $y$
+    liefern negative Werte: $py-lx < 0$? Anzahl ist $\[\frac{lx}{p}\]$.
+
+    Somit
+    \begin{gather*}
+      N = \sum_{x=1}^{m} \[\frac{lx}{p}\]
+    \end{gather*}
+    Analog
+    \begin{gather*}
+      P = \sum_{y=1}^{n} \[\frac{py}{l}\]
+    \end{gather*}
+
+    In oberen Dreieck liegen die Gitterpunkte, welche in $P$ gezählt
+    werden, im unteren Dreieck die zu $N$.
+
+    Sei $S=\{1,2,\dotsc,m\}, T=\{1,2,\dotsc,n\}$. Sei $x\in S$, dann ist
+    \begin{gather*}
+      lx = \[\frac{lx}{p}\]\cdot p + r(x),\quad 1\leq r(x) \leq 2m
+    \end{gather*}
+
+    Die $lx$ bilden $\pod{p}$ wieder ein Halbsystem, also auch die $r(x)$.
+
+    GAUSS' Lemma\todo{hatten wird das? link finden}
+    \begin{gather*}
+      (\frac{l}{p}) = (-1)^{\alpha}
+    \end{gather*}
+    $\alpha = $ Anzahl der $r(x)$, welche in $-S$ liegen.
+
+    \begin{gather*}
+      \sum_{x=1}^{m} lx = \sum_{x=1}^{m} (\[\frac{lx}{p}\]\cdot p + r(x))\\
+      \Longrightarrow
+         l\cdot \frac{m(m+1)}{2} = p \sum_{x=1}^{m} \[\frac{lx}{p}\] +
+         \sum_{x=1}^{m} r(x)\\
+      \sum_{x=1}^{m} r(x) = \sum_{r(x)\in S} r(x) + \sum_{r(x)\in -S} r(x)
+    \end{gather*}
+    Ist $r(x)\in -S$, so $r(x) = p-s(x)$ für ein $s(x) \in S$. (wegen
+    $1\leq r(x) \leq 2m = p-1$)
+
+    Also $r(x) \equiv p+s(x) \pmod{2}$. Es folgt
+    \begin{gather*}
+      \sum_{x=1}^{m} r(x) = \sum_{x=1}^{m} x + \alpha p\pmod{2}\\
+      \Rightarrow
+         l\frac{m(m+1)}{2} \equiv p\sum_{x\in S} \[\frac{lx}{p}\] +
+         \frac{m(m+1)}{2} + \alpha p\pmod{2}\\
+      \Rightarrow
+         \sum_{x\in S} \[\frac{lx}{p}\] \equiv \alpha\pmod{2}
+    \end{gather*}
+
+    Analog
+    \begin{gather*}
+      \sum_{y\in T} \[\frac{py}{l}\] \equiv \beta\pmod{2} \quad\text{mit}
+         (\frac{p}{l}) = (-1)^{\beta}
+    \end{gather*}
+    Es gilt $\alpha+\beta \equiv P+N\pmod{2} \equiv m\cdot n\pmod{2}$.
+
+    Also $(\frac{p}{l})(\frac{l}{p}) = (-1)^{\alpha+\beta} \equiv
+    (-1)^{m\cdot n}$
+  \end{proof}
+\end{satz}
+
+\subsection{Quadratsummen}
+
+\begin{fakt}
+  Jede Primzahl $p\equiv 1\pmod{4}$ besitz die Darstellung $p =
+  x^{2}+y^{2}$ mit $x,y\in\Z$. Dabei sind $x,y$ bis auf das Vorzeichen
+  und die Reihenfolge eindeutig bestimmt.
+
+  \begin{proof}
+    $-1$ ist ein Quardat $\pod{p}$, also existiert ein
+    $z\in\F_{p}^{\ast}$ mit $z^{2}=-1$ in $\F_{p}$. Sei $n$ die kleinste
+    natürliche Zahl mit $n^{2}>p$. Wir betrachten alle $zx-y$ mit $0\leq
+    x< n, 0\leq y< n$ ind $\F_{p}$. Die Anzahl der Klassen ist
+    $n^{2}>p$. Nach dem Dirichlet-Schubfachprinzip existiert also
+    mindestens ein $(x_{1},y_{1}) \ne (x_{2},y_{2})$ mit $zx_{1}+y_{1} =
+    zx_{2}-y_{2}$. Es folgt $z=\frac{x}{y}$ mit $\abs{x}, \abs{y} < n$.
+    Also $-1\equiv \frac{x^{2}}{y^{2}}\pmod{p}$ mit $\abs{x}<n,
+    \abs{y}<n$. $\Rightarrow$ $x^{2}+y^{2} = p\cdot r, x^{2}< p,
+    y^{2}<p$. $\Rightarrow$ $x^{2}+y^{2}=p$.
+
+    Fehlt noch die Eindeutigkeit: Annahme: $p= x^{2}+y^{2} = u^{2}+v^{2}$
+    mit $x,y,u,v >0$. Es folgt: $(x,y) = (u,v) = 1$ sowie $\frac{u}{v}
+    \equiv -v\frac{v}{u}\pmod{p}$ $\Rightarrow$ $-1\equiv
+    \frac{x^{2}}{y^{2}} \equiv \frac{u^{2}}{v^{2}} \pmod{p}$
+    $\Rightarrow$ $\frac{x}{y} \equiv \pm\frac{u}{v}\pmod{p}$.
+
+    Durch Vertauschung von $u$ und $v$ erriecht man $\frac{x}{y} \equiv
+    \frac{u}{v}\pmod{p}$ $\Rightarrow$ $xv - yu \equiv 0\pmod{p}$.
+
+    $p^{2}= (x^{2}-y^{2})(u^{2}-v^{2}) = (xu+yv)^{2} + (xv-yu)^{2}$
+    $\Rightarrow$ $(xv-yu)^{2} < p^{2}$ und teilbar durch $p^{2}$
+    $\Rightarrow$ $xv=yu$ $\Rightarrow$ $x=u, y=v$.
+  \end{proof}
+\end{fakt}
 \clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
