--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -693,8 +693,8 @@ Wei\help{was heiﬂt das?} : $q_{1}=q, r_{1}=r$
 \end{fakt}
 
 \begin{fakt}[kleiner Fermat'scher Satz]
-  Ist $a$ prime Restklasse modulo $m$, so gilt $a^{\phi(m)} \equiv 1(mod
-  m)$ oder in $\nicefrac{\Z}{m\Z}$: $a^{\phi(m)} =1$.
+  Ist $a$ prime Restklasse modulo $m$, so gilt $a^{\phi(m)} \equiv 1 \pmod{m}$
+  oder in $\nicefrac{\Z}{m\Z}$: $a^{\phi(m)} =1$.
 
   \begin{proof}
     Mit $r$ durchl‰uft auch $ar$ die prime Restklasse modulo $m$. Also
@@ -710,7 +710,7 @@ Wei\help{was heiﬂt das?} : $q_{1}=q, r_{1}=r$
 
   \begin{proof}
     \begin{gather*}
-      10^{p-1} \equiv 1 (mod p)
+      10^{p-1} \equiv 1 \pmod{p}
     \end{gather*}
   \end{proof}
 \end{folger}
