* skript.latex   + Rubber erkennt jetzt von selbst, dass die eps-Dateien weg können.
  + Diesen merkwürden Kram mit dem .mps wieder rausgenommen. Matti reicht noch
    die MetaPost-Dateien nach und dann sollte alles funktionieren.

  + Zwei Regeln, damit LaTeX und rubber .1 und .2 als Grafikendung beachten.


git-svn-id: https://svn.lug-jena.de/uni-skripte@498 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hempel-info4/skript.latex
+++ b/hempel-info4/skript.latex
@@ -12,7 +12,6 @@
 % rubber: makeidx.modules   indexstyle.xdy
 %  rubber traut sich nicht die folgenden Dateien zu löschen, weil er nicht
 %  weiß, dass er sie aus der .pdf-Datei erzeugt hat.
-% rubber: clean blatt20-2.eps blatt20.eps blatt16-1.eps blatt16-2.eps blatt28.eps
 
 \documentclass[halfparskip*,german,draft,twoside]{scrreprt}
 
@@ -147,12 +146,8 @@
 
 \makeindex
 
-\ifpdf
-  \DeclareGraphicsRule{.mps}{mps}{*}{}%
-\else
-  \DeclareGraphicsRule{.mps}{eps}{*}{}%
-  \DeclareGraphicsExtensions{.mps,.eps}%
-\fi
+\DeclareGraphicsRule{.1}{\ifpdf mps\else eps\fi}{*}{}
+\DeclareGraphicsRule{.2}{\ifpdf mps\else eps\fi}{*}{}
 
 \SVN $LastChangedRevision$
 \SVN $LastChangedDate$ 
