* skript.latex   + Ein paar Abstände zwischen Ankürzungen korrigiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@514 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -2547,7 +2547,7 @@ Matrix $A(x)$ positiv definit auf $\Omega$ ist.
   Sei $\Omega\subset\R^n$ offen und $u\in C^2(\Omega)$ erfülle für
   alle $\overline{K_R(y)}\subset\Omega$ die sphärische
   Mittelwerteigenschaft. Dann ist $\Delta u(y)\geq 0$ auf $\Omega$,
-  d.h. subharmonisch (Analog gilt dies auch für $\geq$
+  d.\,h. subharmonisch (Analog gilt dies auch für $\geq$
   bzw. $=$.). Insbesondere ist $u$ auf $\Omega$ genau dann harmonisch,
   wenn gilt, $u(y)=\frac{1}{\lvert \partial K_R \rvert} \int_{\partial
     K_R (y)} u(x)dS$ für alle $\overline{K_R(y)} \subset\Omega$.
@@ -3855,7 +3855,7 @@ $\Rightarrow$ $\exists\lim_{n\rightarrow\infty} S_{n}f(x_{0}) =
 \frac{f(x_{0}+0) + f(x_{0}-0)}{2}$
 
 Man darf Fourierreihen \emph[index=Fourierreihe!differenzieren u.\,%
-integrieren,rand=Fourierr. diff. u. int.]{differenzieren \textnormal{und}
+integrieren,rand=Fourierr.\,diff.\,u.\,int.]{differenzieren \textnormal{und}
 integrieren}, falls zusätzliche Bedingungen an die Funktion erfüllt sind.
 
 Sinus-Reihen und Cosinus-Reihen (vgl. 9.3.1\todo{link}): Betrachten eine
@@ -4650,7 +4650,7 @@ Zu Beginn einige Wiederholungen:
     Cauchy-Riemannschen Differentialgleichungen $u_{x} = v_{y}, u_{y} =
     -v_{x}$ gelten. Außerdem ist $f'(z) = u_{x} + iv_{x} = v_{y}-iu_{y}$.
     Die Forderung nach Stetigkeit von $f'$ liefert und auch, dass $u_{x},
-    u_{y}, v_{x}$ und $v_{y}$ stetig in $G$ sind, d.,h. $u$ und $v$ sind
+    u_{y}, v_{x}$ und $v_{y}$ stetig in $G$ sind, d.\,h. $u$ und $v$ sind
     $C^{1}(G)$-Abbildungen.
 
     Mit \autoref{eq:44} und \todo{satz 8.1.2/14} ergibt sich so der Satz.
