* skript.latex   + Einen kleinen Fehler korrigiert. Es fehlte ein = nach dem \not.
git-svn-id: https://svn.lug-jena.de/uni-skripte@518 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/engelbert-mass-integral/skript.latex
+++ b/engelbert-mass-integral/skript.latex
@@ -1285,7 +1285,7 @@ $(\Omega, \CF, m)$ beliebiger Maﬂraum
 \end{satz}
 
 \chapter{Konstruktion von Pr‰maﬂen}
-$\omega\not\emptyset$
+$\omega\ne\emptyset$
 
 \begin{defini}
   $\mathfrak{C} \subseteq \mathfrak{P}(\Omega)$ Mengensystem, $\mathfrak{C}$ heiﬂt dann eine
