--- a/lischke-form-sprachen/skript.latex
+++ b/lischke-form-sprachen/skript.latex
@@ -160,7 +160,7 @@
   \begin{tabular}{ll}
     $X^{\ast}$\ldots & Vereinigung aller Teilmengen\\
     $e$\ldots & leeres Wort\\
-    $X^{+}=$& $X^{\ast}\setminus{e}$
+    $X^{+}=$& $X^{\ast}\setminus\{e\}$
   \end{tabular}
 \end{defini}
 
@@ -180,7 +180,7 @@
 \begin{defini}
   $w'$ hei"st unmittelbare Ableitung von $w$ bezgl. einer Grammatik
   $G=[X,N,S,R]$ $w\longrightarrow w :\Leftrightarrow$
-  
+
   \begin{gather*}
       w,w'\in (X\cup N)^{\ast} \wedge \exists p\exists q\exists p_{1}\exists p_{2}
        (p,q,p_{1},p_{2}\in (X\cup N)^{\ast}\wedge [p,q] \in R \wedge
@@ -215,27 +215,27 @@
 
 \begin{satz}
   Zu jeder Grammtik gibt es eine "aquivalente Normalformgramatik.
-  
+
   \begin{proof}
     Es sei $G=\gramma$ belibige Grammatik und zun"achst
     $[\alpha,\beta]\not\in R$ f"ur jedes Wort $p$
-    
+
     $X':={x':x'\in X}$ wobei $X'\cap X=X'\cap N=\emptyset$
-    
+
     $R'$\ldots Menge aller Regeln, die aus der Regel der Menge $R$
     entstehen, in dem darin alle Buchstaben $x\in X$ durch die
     entspechenden Buchstaben $x'\in X'$ ersetzt werden.
-    
+
     $R'' := \{[x',x]: x\in X\}$ und $G' := [X, N\cup X', S', R'\cup R'']$
     $\longrightarrow$ $G'\sim G$
-    
+
     Ist $[e,p]\in R$ f"ur gewisse $p$, so sei $R'$ wie oben mit Ausnahme
     aller Regeln $[e,p']$.
-    
+
     Sei $E\not\in X'\cup N$ und $R_{E} := \{[B,BE]: B\in X\cup N\} \cup \{[B,EB]:
     B\in \in N\} \cup \{[E,p']: [e,p]\in R \wedge p' \text{ entsteht aus p durch
     Ersetzen aller } x \text{ in } X \text{ durch } x\in X'\}$,
-    
+
     $G_{E}:= [N, N\cup X' \cup\{E\}, S, R'\cup R''\cup R_{E}]$
     $\longrightarrow$ $G_{E}\sim G$.
   \end{proof}
@@ -246,24 +246,24 @@ Avram Noam Chomsky
 \begin{defini}
   Eine Grammatik $G=\gramma$ (ohne Einschr"ankung an die Regelm"enge $R$)
   hei"st Grammatik vom \emph{Typ 0}
-  
+
   $G$ hei"st Grammatik vom \emph{Typ 1} oder nicht verk"urzende Grammtik
   $:\Leftrightarrow$ $\forall p\forall q ([p,q]\in R
   \rightarrow l(p) \le l(q))$
-  
+
   $G$ hei"st Grammatik vom Typ 1' oder Kontextgrammtik $\Longleftrightarrow$
   $\forall p\forall q ([p,q])\in R \rightarrow \exists p_{1}\exists
   p_{2}\exists u\exists B(p_{1},p_{2},u \le (X\cup N)*\wedge B\in N\wedge
   u\not= e\wedge p=p_{1}Bp_{2}\wedge q=p_{1}\cup p_{2}$
-  
+
   $G$ hei"st Grammtik vom Type 2 oder kontextfreie Grammtik
   $:\Leftrightarrow$ $\forall p\forall q([p,q]\in R) \rightarrow p\in N
   \wedge q(X\cup N)^{+}$
-  
+
   G ehi"st Grammtik vom Typ 3, Automaten- oder rechtslineare Grammtik
   $:\Leftrightarrow$ $\forall p,q ([p,q]\in R
   \rightarrow p\in N \wedge q \in X\cdot N\cup X)$
-  
+
   Eine Sprache L hei"st vom Typ~$i$, wenn sie von einer Grammtik vom
   Typ~$i$ erzeugt wird. $rundL_{i}$ ist die Klasse aller Sprachen vom
   Typ~$i$ ($i\in\{0,1,1',2,3\}$).
@@ -272,7 +272,7 @@ Avram Noam Chomsky
 \begin{defini}
   Ist $L$ eine Sprache von Typ~$i$, so hei"st auch $L\cup \{e\}$ Sprache vom
   Typ $i$ ($i\in{0,1,1',2,3}$)
-  
+
   Ist $G=\gramma$ eine Grammtik vom Typ $i$ und $S'\not\in X\cap N$, so
   hei"st auch $G' := [X,N\cup {S}, S, \{[S', e], [S',S]\}\cup R]$ Grammatik
   vom type $i$ ($i\in \{0,1,1',2,3\}$)
@@ -283,16 +283,16 @@ Avram Noam Chomsky
   es eine "aquivalente Grammatik $G=\gramma$ mit $R\subseteq
   N\times(X^{\ast}N\cup X^{\ast})$ gibt es eine "aquivalente rechtslineare
   Grammatik.
-  
+
   \begin{proof}
     \begin{enumerate}
      \item $G=\gramma$ ist Grammatik mit $R\subseteq N\times(X\cup
       N)^{\ast}$
-      
+
       Falls keine Regel $[A,e]\in R$, so $G$ kontextfrei gem"a"s D7,
       andernfalls konstruiere $G'$ nach Algo
     \end{enumerate}
-     
+
     Algo:
     \begin{itemize}
      \item setze $W_{0}:= {A: [A,e] \in R}$ und $W_{i+1} := W_{i}\cup {A:
@@ -310,29 +310,29 @@ Avram Noam Chomsky
     [B,w']\in R' \longrightarrow$ ex. $w=b_{1}\ldots b_{n}$ mit
     $b_{r}\in X\cup N, [B,w]\in R\wedge w'=b_{i_{1}}\ldots b_{i_{k}}$, wobei
     $b_{i_{1}}\ldots b_{i_{k}}$ Teilfolge von $b_{1}\ldots b_{n} und b\in W$
-    f"ur $b\in\{b_{1},\ldots,b_{n}\}\setminus{b_{i_{1}},\ldots,b_{i_{k}}}
+    f"ur $b\in\{b_{1},\ldots,b_{n}\}\setminus\{b_{i_{1}},\ldots,b_{i_{k}}\}
     \rightarrow B \xrightarrow[G]{\ast}w'$.
-    
+
     $p\in L(G') \longrightarrow S\rightarrow_{G'}^{*} p
     \longrightarrow S \Rightarrow_{G}^{*} p
     \longrightarrow p\in L(G). L\not\in L(G')$, da nicht
     verk"urzend $\longrightarrow L(G')\subseteq L(G)\setminus\{e\}$
-    
+
     r"uckw $\subseteq: G' := [X,N,S,R\cup R'] \longrightarrow
     L(G) \subseteq L(G') \longrightarrow
-    L(G)\setminus{e}\subseteq L(G')\setminus{e} \longrightarrow$
-    reicht z.z. $L(G'')\setminus{e}\subseteq L(G)$
-    
-    Entsprechend ex. $w\in L(G)\setminus{e}, w\not\in L(G')$.
-    
+    L(G)\setminus\{e\}\subseteq L(G')\setminus\{e\} \longrightarrow$
+    reicht z.\,z. $L(G'')\setminus\{e\}\subseteq L(G)$
+
+    Entsprechend ex. $w\in L(G)\setminus\{e\}, w\not\in L(G')$.
+
     Es sei $w_{0}$
 
     $\Rightarrow_{G}w_{1}\Rightarrow\ldots
     \Rightarrow_{G} w_{t}$ eine Ableitung von $w$ aus $S$ bzgl.
     $G''$ k"urzester L"ange $w_{0} \Rightarrow S, w_{t}=w$
-    
+
     Da $w\in L(G'')\setminus L(G')$ auf wenigstens einmal eine Regel aus
-    $R\setminus R'$ angewandt worden sein, d.h. eine Regel $[A,e]$ erwa bei
+    $R\setminus R'$ angewandt worden sein, d.\,h. eine Regel $[A,e]$ erwa bei
     $w_{i}\Rightarrow_{G''}w_{i+1} \longrightarrow
     A\in W, w_{i}=w_{i+1}Aw_{i+2}, w_{i+1}=w_{1}w_{2}
     \rightarrow e j<i mit w_{j}=w_{j+1}Bw_{j2},
@@ -347,15 +347,15 @@ Avram Noam Chomsky
     \longrightarrow^{i-j(+1)}_{G''} w_{1}w_{2}
     \longrightarrow_{G''}^{t+(i+1)}$ ist Ableitung von $w$ aus $S$
     der L"ange $t-1$ Widerspruch dazu, dass $t$ eine stets k"urzeste L"ange
-    ist. $\longrightarrow L(G'')\setminus{e}\subseteq L(G')$
-    
+    ist. $\longrightarrow L(G'')\setminus\{e\}\subseteq L(G')$
+
     Ist $q_{1}q_{2}=e [B,A] \in R' \longrightarrow B\in W
     \longrightarrow \alpha j'<j nit w_{j}=w_{j'1}Cw_{j'2}
     w_{j'+1} = w_{j'+1} \ldots\ldots \longrightarrow$ Schluss
     analog mit $BX$ statt $AB$
-    
+
     $e\not\in L(G) \longrightarrow G\sim G'$
-    
+
     $e\in L(G) \longrightarrow$ ex. kontextfreie gram. f"ur
     $L(G'')\cup{e}$ nach D7!
   \end{proof}
@@ -368,19 +368,19 @@ Avram Noam Chomsky
 \begin{defini}
   7'' $CS := L_{1}=L_{1'}$ hei"st Klasse der kintextsensitiven oder
   kontextsprachen
-  
+
   $CF := L_{2}$ hei"st Klasse der kontextfreien oder Chompsky-Spachen.
-  
+
   $REG := L_{3}$ hei"st Klasse der regul"aren, Automaten- oder
   rechstlinearen Sprachen.
 \end{defini}
 
 \begin{satz} % Satz 3
   $REG\subset CF\subset CS\subset REC \subset RE=L_{0}$
-  
+
   \begin{proof}
 $    CF \subset noteq$
-    
+
     $L := \{a^{n} b^{n} c^{n}: n\in N\setminus\{0\} \}
     G=[{a,b,c}, {S,A,B}, S, {[S,aSBA],[A,abA], [AB,BA], [bB, bb], [A,c]}]
     \longrightarrow L(G)=L$
@@ -401,26 +401,26 @@ $    CF \subset noteq$
   Jede kontextfreie Sprache "uber einbuchstabigem Alphabet ist regul"ar.
   \begin{proof}
     Sei $L\in CE, L\subset{a}^{\ast}$.
-    
+
     Nach Satz~4 existiert $n\in N$, so dass f"ur jedes Wort $a^{l}\in L$ mit
     $l>m$ folgt: $l=i+j$ mit $i\le j\le <m mit a^{i+kj}\subseteq L$ f"ur jedes
     $k\in  N$
-    
+
     $L_{0} := {a^{i}: 1\le i\le m}\cap L$
     Falls $L\setminus L_{0}\ne\emptyset sei l_1 := min{l: a^{l}\in
     L\setminus L_{0}}$
-    
+
     Nach Satz~4 ist $l_{1}=i_{1}+j_{1}$ mit $1\le j_{1}\le m, 0\le i_{1}\le
     m$ mit ${ a^{i_{1}+kj_{1}}: k\in N}\subseteq L$
-    
+
 $    L_{1} := {a_{i_{1}+kj_{1}}: k\in N}$
-    
+
     Seien $L_{1},L_{2},\ldots,L_{i'}$ konstruiert mit
 $   L\setminus\cup_{i=0}^{i'}, so l_{i'+1} := min { l: a^{l}\in
     L\setminus\cup_{r=0}^{i'} L_{r}} \longrightarrow l_{i+j}=
     i+j mit 1 \leq j\leq m, 0\leq i$ und $L_{i+1} := {a^{i+kj}:
     k\in N}\subseteq L.$
-    
+
     Nach endl. vielen Schritten muss
     $L\setminus\cup_{r=0}^{i}L_{r}=\emptyset$ eintreten
 $    -\longrightarrow L=\cup_{r=0}^{i}L_{r},
@@ -430,4 +430,3 @@ $    -\longrightarrow L=\cup_{r=0}^{i}L_{r},
 
 $(A4) CF_{1} \subset CS_{1} \subset REC_{1}\subset RE_{1}$
 \end{document}
-% LaTeX_output_format: pdf
