--- a/vogel-info4/skript.latex
+++ b/vogel-info4/skript.latex
@@ -42,7 +42,7 @@
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 
-\usepackage[thmmarks,hyperref]{ntheorem}
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem}
 \usepackage{xspace}
 \usepackage{slashbox}
 
@@ -204,7 +204,7 @@
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 426
+% entspricht Vorlage: 537
 \begin{itshape}
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
