* skript.latex   + Anpassungen an die neue Vorlage 537 gemacht – amsmath bei ntheorem gesetzt.
  + Zwischen Prof. und dem Vornamen muss ein halbes Leerezeichen stehen. Siehe
    <news:slrnelf4bo.2kh.joerg@alea.gnuu.de>


git-svn-id: https://svn.lug-jena.de/uni-skripte@543 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -19,7 +19,7 @@
                                        % amsmath-Umgebungen z.\,B. $$...$$
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 \usepackage{amsfonts}
-\usepackage[thmmarks,hyperref]{ntheorem} 
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem}
 \usepackage{paralist}
 \usepackage{eurosym} %% Eingabe des Eurosymbols
 \usepackage{sistyle} %% fuer die korrekte Angabe von Einheiten
@@ -122,14 +122,14 @@
 \begin{document}
 
 \title{Lineare Optimierung}
-\author{Prof.~Walter Alt}
+\author{Prof.\,Walter Alt}
 \date{Semester: SS 2006}
 \maketitle
 
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 426
+% entspricht Vorlage: 537
 
 \begin{itshape}
   Dieses Dokument wurde als Skript für die auf der
