* skript.latex   + Dr. Haberland nutzt so extensiv Fakten, dass ich die Umgebung fakt auch     besser nummeriere.
  + Wiedermal einige Korrekturen von Benjamin.


git-svn-id: https://svn.lug-jena.de/uni-skripte@548 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -85,10 +85,10 @@
 \newtheorem{bsp}{Beispiel}[chapter]
 \newtheorem{festl}{Festlegung}[chapter]
 \newtheorem{folger}{Folgerung}[chapter]
+\newtheorem{fakt}{Fakt}[chapter]
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
 
 \theoremheaderfont{\scshape}
 \theorembodyfont{\normalfont}
@@ -590,7 +590,7 @@ Für zwei natürliche Zahlen~$a,b$ existieren zwei eindeutig bestimmte Zahlen~$q,r
   \mapsto a+m\Z$. Sie repräsentiert $+$ und $\cdot$, sind also
   \highl{Homomorphismen} von Ringen. Addition, Multiplikation in
   $\nicefrac{\Z}{m\Z}$ ist assoziativ, kommutativ, die Null ist $m\Z$, die 1
-  ist $1+m\Z$. Das Distributivgesetzt gilt nicht.
+  ist $1+m\Z$. Das Distributivgesetz gilt auch.
 \end{bemerk}
 
 \begin{bsp}
@@ -733,9 +733,9 @@ Für zwei natürliche Zahlen~$a,b$ existieren zwei eindeutig bestimmte Zahlen~$q,r
 \end{folger}
 
 \begin{fakt}
-  \begin{gather*}
+  \begin{gather}\label{eq:1}
     \sum_{d\mid m} \phi(d) = m
-  \end{gather*}
+  \end{gather}
 
   \begin{proof}
     Unter den Brüchen $\frac{1}{m}, \frac{2}{m}, \dotsc, \frac{m-1}{m},
@@ -823,13 +823,13 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
     \end{itemize}
 
     Es gibt für jedes $f\mid (p-1)$ entweder gar keine oder $\phi(f)$ viele
-    Elemente der Ordnung $f$.
+    Elemente der Ordnung~$f$.
 
-    Zerlege $\F_{p}^{\ast} = \prod_{f\mid p-1} \Phi_{f}$. $\Phi_{f}$ sind
+    Zerlege $\F_{p}^{\ast} = \bigcup_{f\mid p-1} \Phi_{f}$. $\Phi_{f}$ sind
     alle Elemente der Ordnung $f$. $\Rightarrow$ $p-1 = \sum_{f\mid p-1}
     \epsilon_{f} \phi(f)$, $\epsilon_{f}=0$ oder $\epsilon_{f}=1$.
 
-    Formel von oben: Alle $\epsilon_{f}=1$. Insbesondere existieren Elemente
+    Aus \autoref{eq:1} folgt: Alle $\epsilon_{f}=1$. Insbesondere existieren Elemente
     der Ordnung $p-1$.
   \end{proof}
 \end{satz}
@@ -864,8 +864,8 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
 \end{satz}
 
 \begin{fakt}
-  Sei $(\F_{p}^{\ast})^{2}$ ist die Untergruppe der Quadrate in
-  $\F_{p}^{\ast}$. Für $p>2$ ist $(\F_{p}^{\ast})^{2}$ der Ordnung
+  $(\F_{p}^{\ast})^{2}$ ist die Untergruppe der Quadrate in
+  $\F_{p}^{\ast}$. Für $p>2$ hat $(\F_{p}^{\ast})^{2}$ die Ordnung
   $\frac{p-1}{2}$. Es gibt also im $\F_{p}^{\ast}$ genau $\frac{p-1}{2}$
   Quadrate und Nichtquadrate.
 
@@ -893,7 +893,7 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
 
 \begin{bemerk}
   Es wird nicht präzisiert, wo $\pm1$ liegen. Es kann $\Q, \R, \C,
-  \F_{l}^{\ast}, l\ne p F_{p}^{\ast}$ sein.
+  \F_{l}^{\ast}$ sein.
 \end{bemerk}
 
 \begin{fakt}[Elementare Eigenschaften]
@@ -930,18 +930,16 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
 \end{bemerk}
 
 \begin{defini}
-  Sei $p>2$ prim, $S\subset \F_{p}^{\ast}$ heißt \highl{Halbsystem}, wenn
-  $S\cup (-S) = \F_{p}^{\ast}$.
-
-  $S\cap (-S) = \emptyset$
+  Sei $p>2$ prim, $S\subset \F_{p}^{\ast}$ heißt \highl{Halbsystem} \gdwdef
+  $S\cup (-S) = \F_{p}^{\ast}$ und $S\cap (-S) = \emptyset$.
 \end{defini}
 
 \begin{bsp}
-  $S=\{1,2,\dotsc,\frac{p-1}{2}\}$ Wenn $s\in S, a\in\F_{p}^{\ast}$, dann
-  ist $a\cdot s= e_{s}(a)\cdot s'$ für ein $s'\in F, e_{s}(a) = \pm1$.
+  Sei $S=\{1,2,\dotsc,\frac{p-1}{2}\}$. Wenn $s\in S, a\in\F_{p}^{\ast}$, dann
+  ist $a\cdot s= e_{s}(a)\cdot s'$ für ein $s'\in S, e_{s}(a) = \pm1$.
 \end{bsp}
 
-\begin{lemma}[Gauss]
+\begin{lemma}[Gauss]\label{lem:1}
   \begin{gather*}
     \Big(\frac{x}{p}\Big) = \prod_{s\in S} e_{s}(x)
   \end{gather*}
@@ -950,8 +948,9 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
     Seien $s_{1}, s_{2}\in S, s_{1}\ne s_{2}, a\in \F_{p}^{\ast}, as_{1}=
     e_{s_{1}}(a) s_{1}', as_{2} = e_{s_{2}}(a) s_{2}'$.
 
-    Dann gilt $s_{1}' \ne s_{2}'$. Denn $s_{1}' = s_{2} \Rightarrow s_{1}
+    Dann gilt $s_{1}' \ne s_{2}'$. Denn $s_{1}' = s_{2}' \Rightarrow s_{1}
     = \pm s_{2}$. \lightning
+
   \end{proof}
 \end{lemma}
 
@@ -980,8 +979,8 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
     \{s\in\Z\colon \frac{p-1}{4} < s \leq \frac{p-1}{2}\}$.
 
     \begin{faelle}
-     \item $p=4k+1$, dann ist $\alpha(p)=k$:
-      $k<s\leq 2k$; also $(\frac{2}{p}) = (-1)^{k} = \begin{cases}1 &
+     \item $p=4k+1$, dann ist $\alpha(p)=\card \{ k<s\leq 2k \} = k$:
+      also $(\frac{2}{p}) = (-1)^{k} = \begin{cases}1 &
        p\equiv 1\pmod{8}\\ -1 & p\equiv 5\pmod{8} \end{cases}$.
 
      \item $p=4k+3$. $k+\frac{1}{2} <s \leq 2k+1$ $\Rightarrow$ $\alpha(p)
@@ -991,13 +990,13 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
   \end{proof}
 \end{fakt}
 
-\begin{satz}[Quadratische Rez.gesetz]
+\begin{satz}[Quadratische Reziprozitätsgesetz]
   Seien $p,l$ ungerade Primzahlen, $p\ne l$, dann gilt
   \begin{gather*}
     (\frac{p}{l})(\frac{l}{p}) = (-1)^{\frac{p-1}{2} \frac{l-1}{2}}
   \end{gather*}
 
-  \begin{proof}[nach V.\,G. KAC]
+  \begin{proof}[nach V.\,G.\,KAC]
     Sei $\zeta = e^{\frac{2\pi \sqrt{-1}}{p}}$. Dann gilt
     \begin{gather*}
       \prod_{j=1}^{p-1} (X-\zeta^{j} Y) = \frac{X^{p}-Y^{p}}{X-Y}\\
@@ -1039,7 +1038,7 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
          - \zeta^{-j} \Theta^{-i})(\zeta^{j} \Theta^{-i} - \zeta^{-j}
          \Theta^{i})
     \end{gather*}
-    Beide Ausdrücke underscheiden sich nur in den 2. Faktoren um jeweil
+    Beide Ausdrücke underscheiden sich nur in den 2. Faktoren um jeweils
     $-1$. $\Rightarrow$
     \begin{gather*}
       (\frac{p}{l}) (\frac{l}{p}) = (-1)^{\frac{p-1}{2}\frac{l-1}{2}}
@@ -1048,7 +1047,7 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
   \begin{proof}[Gauss]
     Sei $m= \frac{p-1}{2}, n=\frac{l-1}{2}$ und wir betrachten die
-    $m\cdot n$ Zahlen $py-lx$, $1\leq x\leq m, 1\leq \leq n$. Diese sind
+    $m\cdot n$ Zahlen $py-lx$, $1\leq x\leq m, 1\leq y \leq n$. Diese sind
     alle $\ne0$ und verschieden:
     \begin{gather*}
       p y_{1} - lx_{1} = py_{2} - lx_{2} \Rightarrow p(y_{1}-y_{2}) =
@@ -1063,9 +1062,9 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
     Somit gilt
     \begin{gather*}
-      N = \sum_{x=1}^{m} [\frac{lx}{p}]\\
+      N = \sum_{x=1}^{m} \Bigl[\frac{lx}{p}\Bigr]\\
       \intertext{und}
-      P = \sum_{y=1}^{n} [\frac{py}{l}]
+      P = \sum_{y=1}^{n} \Bigl[\frac{py}{l}\Bigr]
     \end{gather*}
 
     \begin{center}
@@ -1076,12 +1075,12 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
     Sei $S=\{1,2,\dotsc,m\}, T=\{1,2,\dotsc,n\}$. Sei $x\in S$, dann ist
     \begin{gather*}
-      lx = [\frac{lx}{p}]\cdot p + r(x),\quad 1\leq r(x) \leq 2m
+      lx = \Bigl[\frac{lx}{p}\Bigr]\cdot p + r(x),\quad 1\leq r(x) \leq 2m
     \end{gather*}
 
-    Die $lx$ bilden $\pod{p}$ wieder ein Halbsystem, also auch die $r(x)$.
+    Die $lx$ bilden modulo~$p$ wieder ein Halbsystem, also auch die $r(x)$.
 
-    GAUSS' Lemma\todo{hatten wird das? link finden}
+    GAUSS' Lemma (\autoref{lem:1})
     \begin{gather*}
       (\frac{l}{p}) = (-1)^{\alpha}
     \end{gather*}
@@ -1089,7 +1088,7 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
     \begin{gather*}
       \sum_{x=1}^{m} lx = \sum_{x=1}^{m} ([\frac{lx}{p}]\cdot p + r(x))\\
-      \Longrightarrow
+      \Rightarrow
          l\cdot \frac{m(m+1)}{2} = p \sum_{x=1}^{m} [\frac{lx}{p}] +
          \sum_{x=1}^{m} r(x)\\
       \sum_{x=1}^{m} r(x) = \sum_{r(x)\in S} r(x) + \sum_{r(x)\in -S} r(x)
