* skript.latex   + Der Befehl \lightning ist gefräßig und mag besonders gern Leerzeichen und     andere Theoremendezeichen. Mit {} wird er aber auch satt.
    \lightning braucht wie \LaTeX und \TeX ein leeres Argument.


git-svn-id: https://svn.lug-jena.de/uni-skripte@551 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -949,8 +949,7 @@ mit $a_{d}\ne0$ heißt \highl{Polynom} $d$-ten Grades.
     e_{s_{1}}(a) s_{1}', as_{2} = e_{s_{2}}(a) s_{2}'$.
 
     Dann gilt $s_{1}' \ne s_{2}'$. Denn $s_{1}' = s_{2}' \Rightarrow s_{1}
-    = \pm s_{2}$. \lightning
-
+    = \pm s_{2}$. \lightning{}
   \end{proof}
 \end{lemma}
 
@@ -1194,11 +1193,11 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
     \begin{itemize}
      \item $m>0$, da sonst alle $y_{i}=0$, also alle $x_{i}$ teilbar durch $r$
-      $\Rightarrow$ $r\mid p$ $\Rightarrow$ $r=1$ oder $r=p$ \lightning.
+      $\Rightarrow$ $r\mid p$ $\Rightarrow$ $r=1$ oder $r=p$ \lightning{}.
 
      \item $m\ne R$, da sonst alle $y_{i} = \frac{r}{2}$, also $pr \equiv
       (4\frac{r^{2}}{4} = r^{2}) \pmod{r^{2}}$ $\Rightarrow$ $r\mid p$
-      \lightning.
+      \lightning{}.
     \end{itemize}
 
     $pr^{2}m = y_{1}^{2}+y_{2}^{2}+y_{3}^{2}+y_{4}^{2}$
@@ -1391,7 +1390,7 @@ Das sind Verallgemeinerungen des Legendre-Symbols.
 
     $\Rightarrow$ Jede Funktion in diesem Raum ist $=0$ in $1$ und $a$ (da das
     eine Basis ist) $\Rightarrow$ Die Codimension des Raums muss größer als
-    eins sein \lightning.
+    eins sein \lightning{}.
 
     $\chi(a)\ne 1$ $\Rightarrow$
     \begin{gather*}
@@ -1421,7 +1420,7 @@ Für $a\ne1$ existieriert $\chi$ mit $\chi(a)\ne1$.
 
 Die $\chi$ bilden in $\mathrm{L}^{2}( (\nicefrac{\Z}{m\Z})^{\ast}, \C)$ eine
 ON-Basis. Wäre $\chi(a)=1$ für alle $\chi$, so würde folgen $\chi(a) =
-\chi(1)$ $\forall\chi$ $\Rightarrow$ $f(a)=f(1)$ \lightning $\forall f\in
+\chi(1)$ $\forall\chi$ $\Rightarrow$ $f(a)=f(1)$ \lightning{} $\forall f\in
 \mathrm{L}^{2}$
 
 Sei also $\rho(a)\ne1$
@@ -2091,17 +2090,17 @@ Es folgt
       $\pi$ und $\overline{\pi}$ sind nicht assoziiert: $a+bi =
       \epsilon(a-bi), \epsilon \in M_{4}$
 
-      $\epsilon=1$ $\Rightarrow$ $b=0$ \lightning\\
-      $\epsilon=-1$ $\Rightarrow$ $a=0$ \lightning\\
-      $\epsilon=i$ $\Rightarrow$ $a=b$ $\Rightarrow$ $p=2a^{2}$ \lightning\\
-      $\epsilon=-i$ $\Rightarrow$ $a=-b$ $\Rightarrow$ $p=2a^{2}$ \lightning
+      $\epsilon=1$ $\Rightarrow$ $b=0$ \lightning{}\\
+      $\epsilon=-1$ $\Rightarrow$ $a=0$ \lightning{}\\
+      $\epsilon=i$ $\Rightarrow$ $a=b$ $\Rightarrow$ $p=2a^{2}$ \lightning{}\\
+      $\epsilon=-i$ $\Rightarrow$ $a=-b$ $\Rightarrow$ $p=2a^{2}$ \lightning{}
 
      \item Sei also $p\equiv 3\pmod{4}$ und $p=\pi\cdot\overline{\pi},
       \pi\ncong \overline{\pi}$ ($p=\epsilon \pi\cdot\overline{\pi}$
-      impliziert $\epsilon=1$) $\pi=a+bi \Rightarrow p=a^{2}+b^{2}$ \lightning
+      impliziert $\epsilon=1$) $\pi=a+bi \Rightarrow p=a^{2}+b^{2}$ \lightning{}
 
       $\pi=\epsilon\pi^{2}=\epsilon(a+bi)^{2}$\\
-      $p^{2}=(a^{2}+b^{2})^{2}$ $\Rightarrow$ $p=a^{2}+b^{2}$ \lightning
+      $p^{2}=(a^{2}+b^{2})^{2}$ $\Rightarrow$ $p=a^{2}+b^{2}$ \lightning{}
       $\Rightarrow$ $p$ prim in $\Z[i]$.
     \end{enumerate}
   \end{proof}
@@ -2467,7 +2466,7 @@ Der Kern des Beweises: Existenz nichttrivialer Einheiten.
   \begin{align*}
     \alpha\beta' = \pm m &\Rightarrow \alpha\beta\beta' = \pm m\beta\\
     &\quad \pm m\alpha =\pm m\beta\\
-    &\Rightarrow \alpha = \pm\beta \lightning
+    &\Rightarrow \alpha = \pm\beta \lightning{}
   \end{align*}
   Somit ist $\delta$ nichttriviale Einheit.
 \end{proof}
@@ -2509,7 +2508,7 @@ Die Arithmetik in den $O_{K}$ ist nicht so leicht wie in $\Z$ oder $\Z[i]$.
 
   Analog für $a^{2}+5b^{2}=7$.
 
-  $N(4\pm\sqrt{-5}) = 21$, echte Teiler hätten Norm 3 oder 7. \lightning
+  $N(4\pm\sqrt{-5}) = 21$, echte Teiler hätten Norm 3 oder 7. \lightning{}
 \end{bsp}
 
 Idee von Kummer zur Rettung der Arithmetik in $O_{K}$: Man nehme zu den
