--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1823,6 +1823,134 @@ Was ist der Unterschied zwischen $DES^{-1}_{k}$ und $DES_{k^{T}}$? DES
 beschreibt auch, wie die Teilschlüssel erzeugt werden und daher ist $k^{T}$
 nicht der permutierte Schlüssel, der bei $DES^{-1}_{k}$ verwendet wird.
 
+\todo{Hier fehlt die Vorlesung vom 20.11.}
+
+% 22.11.
+
+\subsection{Differentielle Kryptoanalyse}
+
+$A, A'\in\Z_{2}^{4}$ als Eingabe für $S_{1}$\\
+$A\oplus A'$ ist die Input-Differenz\\
+$S_{1}(A)\oplus S_{1}(A')$ ist die Output-Differenz\\
+Für jeder Differenz $A^{*}\in\Z_{2}^{4}$ ($A^{*}\ne(0000)$) gibt es acht
+Mengen $\{A,A'\} = \{A, A\oplus A^{*}\}$ mit dieser Differenz $A^{*}$
+
+\begin{bsp}
+  \begin{gather*}
+    S_{1} =
+       \begin{pmatrix}
+         5& 2& 1& 6& 3& 4& 7& 0\\
+         1& 4& 6& 2& 0& 7& 5& 3
+       \end{pmatrix}
+       \qquad A^{*}=(0011)\\
+    \begin{array}{cc|c}
+      A & A'& S_{1}(A)\oplus S_{1}(A')\\
+      \hline
+      (0000)& (0011)& (101)\oplus(110) = (011)\\
+      (0001)& (0010)& (010)\oplus(001) = (011)\\
+      (0100)& (0111)& (011)\oplus(000) = (011)\\
+      (0101)& (0110)& (100)\oplus(111) = (011)\\
+      \hline
+      (1000)& (1011)& (001)\oplus(010) = (011)\\
+      (1001)& (1010)& (100)\oplus(110) = (010)\\
+      (1100)& (1111)& (000)\oplus(011) = (011)\\
+      (1101)& (1110)& (111)\oplus(101) = (010)
+    \end{array}
+  \end{gather*}
+\end{bsp}
+Theoretisch sind acht verschiedene Ergebnisse möglich, aber einige treten
+häufiger auf als andere. Es gibt 15 derartige Tabellen für $S_{1}$ und
+$S_{2}$ (insgesamt 30).
+
+unser Ansatz zunächst: Was passiert beider Verschlüsselung zweier
+Klartextblöcke $(L_{i-1}, R_{i-1})_{12 Bit}$ und $(L_{i-1}', R_{i-1}')_{12 Bit}$ in Runde~$i$?
+\begin{enumerate}[1.\,{Schritt}]
+ \item Diffusion (oder Expansion) $D(R_{i-1})_{8 Bit}$
+ \item $(D(R_{i-1})\oplus k_{i})_{8 Bit} = (A_{4 Bit}, B_{4 Bit})$
+ \item $(S_{1}(A)_{3 Bit}, S_{2}(B)_{3 Bit})_{6 Bit} = f_{k_{i}}(R_{i-1})_{6
+   Bit}$
+\end{enumerate}
+
+genauso für den zweiten Klartextblock $(L_{i-1}', R_{i-1}')$, aber genauer:
+\begin{gather*}
+  R_{i-1}'\\
+  \downarrow\\
+  D(R_{i-1}') = (\tilde{A}', \tilde{B}') \qquad k_{i} = ((k_{i}^{L})_{4Bit},
+     (k_{i}^{R})_{4Bit})\\
+  D(R_{i-1}')\oplus k_{i} = (\tilde{A}'\oplus k_{i}^{L}, \tilde{B}'\oplus
+     k_{i}^{R}) = (A', B')\\
+  \downarrow\\
+  (S_{1}(A'), S_{2}(B')) = f_{k_{i}}(R_{i-1}')
+\end{gather*}
+
+Es gilt:
+\begin{gather*}
+  A\oplus A' = (\tilde{A} \oplus k_{i}^{L}) \oplus (\tilde{A}'\oplus
+     k_{i}^{L}) = \tilde{A}\oplus \tilde{A}'\\
+  B\oplus B' = (\tilde{B} \oplus k_{i}^{L}) \oplus (\tilde{B}'\oplus
+     k_{i}^{L}) = \tilde{B}\oplus \tilde{B}'
+\end{gather*}
+aber die Output-Differenz $S_{1}(A)+S_{1}(A')$ hängt vom Schlüssel~$k_{i}^{L}$
+ab. Wenn $S_{1}$ nicht linear ist, dann gilt i.\,a. \help{schreibt man "`im
+Allgemeinen"' wirklich klein?} nicht.
+\begin{gather*}
+  S_{1}(A)\oplus S_{1}(A') = S_{1}(A\oplus A')
+\end{gather*}
+Annahme: Wir kennen $\tilde{A}, \tilde{A}'$ und $S_{1}(A), S_{1}(A')$.
+
+Es gilt:
+\begin{enumerate}
+ \item $A$ und $A'$ haben die Input-Differenz $A\oplus A' = A^{*} =
+  \tilde{A}\oplus \tilde{A}'$
+ \item $A$ und $A'$ haben die Output-Differenz $C^{*}=S_{1}(A)\oplus S_{1}(A')$
+\end{enumerate}
+
+Weiterhin gilt: $\{A, A'\}$ kommt in der Tabelle für $A^{*}$ vor und man
+erkennt alle Möglichkeiten für $\{A,A'\}$ die Output-Differenz $C^{*}$ zu
+bilder. Da $\tilde{A}$ und $C^{*}$ bekannt sind und $A=\tilde{A}\oplus
+k_{i}^{L}$ ergben sich auf diese Weise Einschränkungen für die Wahl von
+$k_{i}^{L}$.
+
+\begin{bsp}
+  Illustration am oberen Beispiel: $\tilde{A}=(0100), \tilde{A}'=(0110),
+  C^{*}=S_{1}(A)\oplus S_{1}(A')=(010), \tilde{A}\oplus \tilde{A}' = (0011) =
+  A^{*}$
+
+  Tabelle: $A\in\{(1001), (1010), (1101), (1110)\}$ nun gilt weiter $k_{i}^{L}
+  = A\oplus \tilde{A} cmi\{ (1101), (1110), (1001), (1010)\}$
+\end{bsp}
+
+Das war jetzt für einen Klartextblock, mit einem weitern Klartextblock kann
+man eine weitere Schlüsselmenge finden. Der tatsächliche Schlüssel liegt im
+Durchschnitt beider Teilmengen.
+
+Dies Ganze so oft bis der (Runden"~)""Schlüssel eindeutig bestimmt ist.
+
+\subsubsection{Differentielle Kryptoanalyse für ein System mit drei Runden}
+
+Der obige Ansatz ist ausreichend für eine Analyse von drei Runden.
+Ausgangspunk: zwei Klartextblöcke wie eben $(L_{0}, R_{0}), (L_{0}', R_{0}')$
+und die zugehörigen Geheimtextblöcke $(L_{3}, R_{3}), (L_{3}', R_{3}')$. Es
+gilt:
+\begin{align*}
+  L_{3} &= L_{2}\oplus f_{k_{3}}(R_{2}) = R_{1}\oplus f_{k_{3}}(R_{2}) =
+     L_{0}\oplus f_{k_{1}}(R_{0})\oplus f_{k_{3}}(R_{2})\\
+  L_{3}' &= L_{0}'\oplus f_{k_{1}}(R_{0}')\oplus f_{k_{3}}(R_{2}')
+\end{align*}
+Wir wählen die Klartextblöcke, so dass $R_{0}=R_{0}'$ gilt.
+Setzen die Output-Differenz $L_{3}^{*} := L_{3}\oplus L_{3}'$.
+\begin{gather*}
+  L_{3}^{*} = \underbrace{L_{0}\oplus L_{0}'}_{=L_{0}^{*}} \oplus
+     f_{k_{3}}(R_{2}) \oplus f_{k_{3}}(R_{2}')\\
+  L_{3}^{*}\oplus L_{0}^{*} = f_{k_{3}}(R_{2}')\oplus f_{k_{3}}(R_{2}') =
+     f_{k_{3}}(R_{3})\oplus f_{k_{3}}(R_{3}'), da R_{2}=R_{3} und R_{2}'=R_{3}'
+\end{gather*}
+Wir kennen also $R_{3}=R_{2}$ und damit $D(R_{2}) = (\tilde{A}, \tilde{B})$
+und $R_{3}'=R_{2}'$ und damit $D(R_{2}') = (\tilde{A}', \tilde{B}')$.
+
+Die linke Hälfte von $f_{k_{3}}(R_{3})\oplus f_{k_{3}}(R_{3}') =
+S_{1}(\tilde{A})\oplus S_{1}(\tilde{A}')$ und sind in der Situation wie oben.
+
 \clearpage
 \appendix
 \chapter{Übungsaufgaben}
