- Einstufung der Kryptoanalyse erweitert und um engl. Begriffe ergaenzt - Mallory hinzugefuegt - Sicherheit etwas genauer und weiter beschrieben sowie Brute Force erwaehnt
git-svn-id: https://svn.lug-jena.de/uni-skripte@558 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -452,16 +452,21 @@ sichere Verbindung übertragen.
 Zur Einstufung einer \highl{Kryptoanalyse} trifft man die folgende qualitative
 Unterscheidungen:
 \begin{itemize}
- \item \highl{vollständiges Aufbrechen} heißt, dass der Schlüssel $k_{d}$
+  \item \highl{vollständiges Aufbrechen}\footnote{engl. total break} heißt, dass der Schlüssel $k_{d}$
   entdeckt wird, woraufhin jede Nachricht~$m$, die mit $k_{e}$ verschlüsselt
   wird, entschlüsselt werden kann.
 
- \item \highl[Deduktion!global]{globale Deduktion} bedeutet, dass ohne
+ \item \highl[Deduktion!global]{globale Deduktion}\footnote{engl. global
+   deduction} bedeutet, dass ohne
   Kenntniss von $k_{d}$ eine zu $D(\_, k_{d})$ äquivalente Übersetzung
   gefunden wird.
 
- \item Als \highl[Deduktion!lokal]{lokale Deduktion} bezeichnet man das Finden
+ \item Als \highl[Deduktion!lokal]{lokale Deduktion}\footnote{engl. instance or
+   local deduction} bezeichnet man das Finden
   eines Klartextes für einen einzelnen Chiffretext.
+\item \highl{Informationsdeduktion}\footnote{information deduction} bedeutet,
+  dass einige Informationen über den Schlüssel oder den Klartext gewonnen werden
+  können.
 \end{itemize}
 
 Ebenso gibt es eine Unterscheidung der verschiedenen Arten eines
@@ -496,13 +501,25 @@ Ebenso gibt es eine Unterscheidung der verschiedenen Arten eines
 
 Ebenso wie Sender und Empfänger durch spezielle Namen in der Krypologie
 gekennzeichnet werden, verwendet man auch für einen \highl{Angreifer} einen
-speziellen Namen: \highl{Eve}.
+speziellen Namen: \highl{Eve} heißt der Angreifer, der jedwede KOmmunikation
+mitlesen kann und mit \highl{Mallory} bezeichnet man den Angreifer, der auch
+Daten verändern kann.
 
 Abhängig von der \highl{Sicherheit} des Ver-/Entschlüsselungsverfahrens kann
 man Kryptosysteme in die Kategorien "`uneingeschränkt sicher"' (z.\,B.
 One-Time-Pad), "`praktisch sicher"' (in praktikabler Zeit keine Lösung; die
 Tageszeitung von Morgen erst nächste Woche entschlüsseln) und "`unsicher"'
 (z.\,B. Caesarcode) einteilen.
+
+Derzeit ist das One-Time-Pad das einzige bekannte, uneingeschränkt sichere
+Kryptoverfahren. In der Praxis findet es hauptsächlich im militärischen Bereich
+und in hochsicheren Umgebungen Anwendung.
+
+Alle weiteren Kryptosysteme sind mit einer Ciphertext-Only-Attacke angreifbar.
+Man probiert einfach jeden möglichen Schlüssel und prüft, ob der resultierende
+Klartext eine Bedeutung hat. Eine derartige Attacke nennt man \highl{Brute
+Force}, da diese nur mit roher Gewalt (Durchtesten aller Kombinationen)
+funktioniert.
 
 \subsection{Beispiel einer praktischen Kryptoanalyse}
 Bedeuten "`viele"' Schlüssel "`hohe"' Sicherheit? \textit{Ansatz}:
@@ -646,7 +663,7 @@ Substitutionen werden unterschieden als:
 
 \section{Monoalphabetische Substitutionen}
 
-O.\,B.\,d.\,A. ist Klartextalphabet $\Sigma =$ Geheimtextalphabet $\Gamma$.
+O.\,B.\,d.\,A. entspricht das Klartextalphabet $\Sigma$ dem Geheimtextalphabet $\Gamma$.
 Wir legen uns weiter auf das Beispielalphabet $\{a,b,c,\dotsc,x,y,z\}$ fest
 und schreiben es in der Form $X=\{0,1,2,\dotsc,\linebreak[1] 23,24,25\}$. Dann gilt:
 $\abs{X} = 26$. Für $\abs{X}=n$ denken wir uns $X=\{0,1,2,\dotsc, n-2,\linebreak[1] n-1\}$.
@@ -673,11 +690,9 @@ krypographisch auf Grund der \highl{Häufigkeitsverteilung} auch bei
   m_{2}\dotso m_{k}$
 \end{description}
 
-Nachteile des Ganzen:
-\begin{itemize}
- \item wenige ($n$) Schlüssel
- \item Verschlüsselung ist geknackt, wenn \textit{ein} Buchstabe übersetzt ist
-\end{itemize}
+Das Verfahren hat den Nachteil, das nur wenige ($n$) Schlüssel verfügbar sind
+und das die Verschlüsselung gebrochen ist, wenn \textit{ein} Buchstabe übersetzt
+ist.
 
 Dies gibt Anlass zu folgender Verallgemeinerung.
 
@@ -894,9 +909,9 @@ Mithilfe eines Schlüsselworts.
 \begin{bsp}
   Als Schlüsselwort nehmen wir "`ALLGAEU"' und als Klartext "`emmentaler"'.
 
-  ALLGAEUALLGAEU\\
-  emmentaler\\
-  EXXKNXULPC
+  \texttt{emmentaler}\\
+  \texttt{ALLGAEUALLGAEU}\\
+  \texttt{EXXKNXULPC}
 
   Verschlüsselung ist einfach.
 \end{bsp}
