große Formel ("Identität") besser ausgerichtet und noch ein paar Kleinigkeiten korrigiert - BS
git-svn-id: https://svn.lug-jena.de/uni-skripte@561 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -1138,14 +1138,14 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
 
     Fehlt noch die Eindeutigkeit: Annahme: $p= x^{2}+y^{2} = u^{2}+v^{2}$
     mit $x,y,u,v >0$. Es folgt: $(x,y) = (u,v) = 1$ sowie $\frac{u}{v}
-    \equiv -v\frac{v}{u}\pmod{p}$ $\Rightarrow$ $-1\equiv
+    \equiv -\frac{v}{u}\pmod{p}$ $\Rightarrow$ $-1\equiv
     \frac{x^{2}}{y^{2}} \equiv \frac{u^{2}}{v^{2}} \pmod{p}$
     $\Rightarrow$ $\frac{x}{y} \equiv \pm\frac{u}{v}\pmod{p}$.
 
     Durch Vertauschung von $u$ und $v$ erriecht man $\frac{x}{y} \equiv
     \frac{u}{v}\pmod{p}$ $\Rightarrow$ $xv - yu \equiv 0\pmod{p}$.
 
-    $p^{2}= (x^{2}-y^{2})(u^{2}-v^{2}) = (xu+yv)^{2} + (xv-yu)^{2}$
+    $p^{2}= (x^{2}+y^{2})(u^{2}+v^{2}) = (xu+yv)^{2} + (xv-yu)^{2}$
     $\Rightarrow$ $(xv-yu)^{2} < p^{2}$ und teilbar durch $p^{2}$
     $\Rightarrow$ $xv=yu$ $\Rightarrow$ $x=u, y=v$.
   \end{proof}
@@ -1158,15 +1158,18 @@ Wir multiplizierne die Gleichungen $as = e_{s}(a) s'$ über $s\in S$ auf:
   eine Quadratzahl).
 
   \begin{proof}
-    \begin{gather*}
-      (x_{1}^{2}+x_{2}^{2}+x_{3}^{2}+x_{4}^{2})
-         (y_{1}^{2}+y_{2}^{2}+y_{3}^{2}+y_{4}^{2}) = (x_{1}y_{1} + x_{2}y_{2}
-         + x_{3}y_{3} + x_{4}y_{4})^{2} + (x_{1}y_{2}-x_{2}y_{1}+x_{3}y_{4} -
-         x_{4}y_{3})^{2} +
-         (x_{1}y_{3}-x_{3}y_{1}+x_{2}y_{4}-x_{2}y_{y}-x_{4}y_{2})^{2}
-         + (x_{1}y_{4}-x_{4}y_{1}+x_{2}y_{3}-x_{3}y_{2})^{2}
-    \end{gather*}
-    Es genügt zu zeigen, dass der Satz für die Primzahlen gilt: Der Fall $p=2$
+  Wegen
+    \begin{equation*}
+    \begin{split}
+      (x_{1}^{2}+x_{2}^{2}+&x_{3}^{2}+x_{4}^{2})
+         (y_{1}^{2}+y_{2}^{2}+y_{3}^{2}+y_{4}^{2}) \\ 
+         =&(x_{1}y_{1} + x_{2}y_{2}+ x_{3}y_{3} + x_{4}y_{4})^{2} +
+         (x_{1}y_{2}-x_{2}y_{1}+x_{3}y_{4} -x_{4}y_{3})^{2}\\ 
+         &+ (x_{1}y_{3}-x_{3}y_{1}+x_{4}y_{2}-x_{2}y_{4})^{2}
+         + (x_{1}y_{4}-x_{4}y_{1}+x_{2}y_{3}-x_{3}y_{2})^{2},
+    \end{split}
+    \end{equation*}
+    genügt es zu zeigen, dass der Satz für die Primzahlen gilt: Der Fall $p=2$
     ist klar -- $2=0^{2}+0^{2}+1^{2}+1^{2}$.
 
     Sei $p>2, p\in \PZ$, Für $0\leq x^{2} < \frac{1}{2}p$ sind die
